include final edits

--- a/erdinc2024SEG/abstract.bib
+++ b/erdinc2024SEG/abstract.bib
@@ -1,6 +1,6 @@
 @article{ambient,
   title={Ambient diffusion: Learning clean distributions from corrupted data},
-  author={G. Daras, K. Shah, Y. Dagan, A. Gollakota, A. G. Dimakis, and A. Klivans},
+  author={Giannis Daras, Kulin Shah, Yuval Dagan, Aravind Gollakota, Alexandros G Dimakis, and Adam Klivans},
   journal={Advances in Neural Information Processing Systems (NeurIPS)},
   year={2023}
 }
