--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,6 @@ All submissions to the Image24 conference with additional figures, references, .
 
 List of abstracts:
 
-- [Digital twin with control](GahlotLi2024SEG/abstract.qmd) A Digital Twin for Geological Carbon Storage with Controlled Injectivity
+- [Digital twin with control](GahlotLi2024SEG/paper.qmd) A Digital Twin for Geological Carbon Storage with Controlled Injectivity
 
 - [WISER](yin2024SEG/paper.qmd): full-Waveform variational Inference via Subsurface Extensions with Refinements
