--- a/index.qmd
+++ b/index.qmd
@@ -12,3 +12,4 @@ List of abstracts:
 - [Velocity Continuation for Common Image Gathers with Fourier Neural Operators](Rex2024SEG/paper.qmd) A framework to accelerate migration-velocity analysis and uncertainty quantification
 - [Digital twin with control](GahlotLi2024SEG/paper.qmd) A Digital Twin for Geological Carbon Storage with Controlled Injectivity
 - [WISER](yin2024SEG/paper.qmd): full-Waveform variational Inference via Subsurface Extensions with Refinements
+- [Stochastic resampling](Yunlin_Zeng2024SEG/paper.qmd): Enhancing Full-Waveform Variational Inference through Stochastic Resampling and Data Augmentation
