--- a/Yunlin_Zeng2024SEG/paper.qmd
+++ b/Yunlin_Zeng2024SEG/paper.qmd
@@ -21,7 +21,7 @@ By interpreting the initial migration-velocity model as stochastic latent variab
 
 To improve the neural posterior estimation's robustness, multiple initial migration-velocity models, $\mathbf{x}_0$, are obtained by randomly perturbing the ground-truth velocity model, $\mathbf{x}$, followed by extensive smoothing. Since this deformation is stochastic, we can sample an "infinite" number of background models, $\mathbf{x}_0\sim p(\mathbf{x}_0\vert \mathbf{x})$, to be used during training, although in practice we regenerate the background model a few times ($3-5$) (Figure 1(a)). Then, new $\mathbf{\bar{y}}^{(i)}$ are generated based on each $\mathbf{x}_0^{(i)}$ and $\mathbf{y}$ (Figure 1(b)), and the resulting $\{\mathbf{x}, \mathbf{\bar{y}}^{(i)}\}$ pairs form a training dataset for the Conditional Normalizing Flow (CNF) (Figure 1(c)). 
 
-To evaluate our method, we divide the Compass model dataset [@Jones2012] by allocating $800$ pairs for training and $150$ for testing. We train the baseline CNF on $M=800$ velocity-extended image pairs, and train enhanced CNFs on augmented training pairs ($M=1600, 2400, ...$ etc.). The trained CNFs are evaluated by structural similarity index measure (SSIM) and root mean square error (RMSE) of the posterior samples' mean against the ground truth. SSIM improves from $0.725$ to $0.753$ while RMSE improves from $0.110$ to $0.107$ on $150$ unseen test samples.  Figure 2 shows the conditional mean of the baseline and the enhanced CNF posterior samples, where the enhanced CNF sampler aligns more closely with the ground truth. We also observe the trend that the uncertainty is reduced as we increase the number of background-velocity model regenerations during training. This implies that the uncertainty information in the baseline has yet not captured the uncertainty fully due to the choice of a fixed background-velocity model while our method has learned to incorporate this uncertainty information into the final inference result.
+To evaluate our method, we divide the Compass model dataset [@Jones2012] by allocating $800$ pairs for training and $150$ for testing. We train the baseline CNF on $M=800$ velocity-extended image pairs, and train enhanced CNFs on augmented training pairs ($M=1600, 2400, ...$ etc.). The trained CNFs are evaluated by structural similarity index measure (SSIM) and root mean square error (RMSE) of the posterior samples' mean against the ground truth. SSIM improves from $0.725$ to $0.753$ while RMSE improves from $0.110$ to $0.107$ on $150$ unseen test samples.  Figure 2 shows the conditional mean and point-wise standard deviation of the baseline and the enhanced CNF posterior samples, where the enhanced CNF sampler aligns more closely with the ground truth. We observe the trend that the uncertainty is reduced as we increase the number of background-velocity model regenerations during training. This implies that the uncertainty information in the baseline has yet not captured the uncertainty fully due to the choice of a fixed background-velocity model while our method has learned to incorporate this uncertainty information into the final inference result.
 
 ::: {#fig-framwork}
 ![](./figs/framework.png){width="90%"}
