--- a/GahlotLi2024SEG/paper.bib
+++ b/GahlotLi2024SEG/paper.bib
@@ -34,15 +34,15 @@
   publisher={Springer}
 }
 
-@conference {yu2023IMAGEmsc,
-	title = {Monitoring Subsurface CO2 Plumes with Sequential Bayesian Inference},
-	booktitle = {International Meeting for Applied Geoscience and Energy},
-	year = {2023},
-	note = {(IMAGE, Houston)},
-	month = {08},
-	abstract = {To monitor and predict CO2 plume dynamics during geological carbon storage, reservoir engineers usually perform two-phase flow simulations. While these simulations may provide useful insights, their usefulness is limited due to numerous complicating factors including uncertainty in the dynamics of the plume itself. To study this phenomenon, we consider stochasticity in the dynamic caused by unknown random changes in the injection rate. By conditioning the CO2 plume predictions on seismic observations, we correct the CO2 plume predictions and quantify uncertainty with machine learning.},
-	keywords = {Bayesian inference, CCS, deep learning, Imaging, monitoring, SEG, Uncertainty quantification},
-	url = {https://slimgroup.github.io/IMAGE2023/SequentialBayes/abstract.html},
-	presentation = {https://slim.gatech.edu/Publications/Public/Conferences/SEG/2023/yu2023IMAGEmsc},
-	author = {Ting-ying Yu and Rafael Orozco and Ziyi Yin and Mathias Louboutin and Felix J. Herrmann}
+@CONFERENCE{yu2023IMAGEmsc,
+  author = {Ting-ying Yu and Abhinav Prakash Gahlot and Rafael Orozco and Ziyi Yin and Mathias Louboutin and Felix J. Herrmann},
+  title = {Monitoring Subsurface CO2 Plumes with Sequential Bayesian Inference},
+  year = {2023},
+  month = {08},
+  booktitle = {International Meeting for Applied Geoscience and Energy},
+  abstract = {To monitor and predict CO2 plume dynamics during geological carbon storage, reservoir engineers usually perform two-phase flow simulations. While these simulations may provide useful insights, their usefulness is limited due to numerous complicating factors including uncertainty in the dynamics of the plume itself. To study this phenomenon, we consider stochasticity in the dynamic caused by unknown random changes in the injection rate. By conditioning the CO2 plume predictions on seismic observations, we correct the CO2 plume predictions and quantify uncertainty with machine learning.},
+  keywords = {SEG, ccs, deep learning, uncertainty quantification, bayesian inference, imaging, monitoring},
+  url = {https://slimgroup.github.io/IMAGE2023/SequentialBayes/abstract.html},
+  presentation = {https://slim.gatech.edu/Publications/Public/Conferences/SEG/2023/yu2023IMAGEmsc},
+  note = {(IMAGE, Houston)}
 }
