--- a/GahlotLi2024SEG/paper.qmd
+++ b/GahlotLi2024SEG/paper.qmd
@@ -4,13 +4,13 @@ author:
   - name:
       Abhinav Prakash Gahlot^1\*^, Haoyun Li,^1\*^, Ziyi Yin^1^, Rafael Orozco^1^, and Felix J. Herrmann^1^ \
       
-      ^1^ Georgia Institute of Technology, ^\*^ first two authors contributed equally
+      ^1^ Georgia Institute of Technology, ^\*^ equal contribution
 bibliography: paper.bib
 ---
 
 ## Introduction
 
-Digital Twins refer to dynamic virtual replicas of subsurface systems, integrating real-time data and employing advanced generative Artificial Intelligence (genAI) methodologies, such as neural posterior density estimation via simulation-based inference and sequential Bayesian inference. Thanks to combination of these advanced Bayesian inference techniques, our approach is capable of addressing challenges of monitoring and controlling CO~2~ storage projects. These challenges include dealing with the subsurface's complexity and heterogeneity (seismic and fluid-flow properties), operations optimization, and risk mitigation, e.g. via injection rate control. Because our Digital Twin is capable of handling diverse monitoring data, consisting of time-lapse seismic and data collected at (monitoring) wells, it entails a technology that serves as a platform to integrate seemingly disparate and siloed fields, e.g. geophysics and reservoir engineering. In addition, recent breakthroughs in genAI, allow Digital Twins to capture uncertainty in a principled way [@yu2023IMAGEmsc;@herrmann2023president;@gahlot2023NIPSWSifp]. By employing training and inference recursively, the Digital Twin trains its neural networks on samples of the simulated current state---i.e., the CO~2~ saturation/pressure, paired with simulated imaged seismic and/or data collected at (monitoring) wells. These training pairs of the simulated state and simulated observations are obtained by sampling the posterior distribution, $\mathbf{x}_{k-1}\sim p(\mathbf{x}_{k-1}\vert \mathbf{y}^\mathrm{o}_{1:k-1})$, at the previous timestep, $k-1$, conditioned on field data, $\mathbf{y}^\mathrm{o}_{1:k-1}$, collected over all previous timesteps, $1:k-1$, followed by advancing the state to the current timestep, followed by simulating (seismic/well) observations associated with that state. Given these simulated state-observation pairs, the Digital Twin's networks are trained, so they are current and ready to produce samples of the posterior when the new field data comes in---i.e. $\mathbf{x}_{k}\sim p(\mathbf{x}_{k}\vert \mathbf{y}^\mathrm{o}_{1:k})$. While this new neural approach to data assimilation for CO~2~ storage projects provides what is called an uncertainty-informed *Digital Shadow*, it lacks decision making and control, which would make it a Digital Twin [@thelen2022comprehensivea], capable of optimizing storage operations while mitigating risks including the risk of fracturing the cap rock by exceeding the fracture pressure. The latter risk is illustrated in Figure 1, where the first row contains simulated samples of the differential pressure at timestep, $k=4$, without control. These samples for the simulated state exceed the fracture pressure and are denoted by the red areas. During this talk, we will demonstrate how the Digital Twin can make informed decisions to avoid exceeding the fracture pressure.
+Digital Twins refer to dynamic virtual replicas of subsurface systems, integrating real-time data and employing advanced generative Artificial Intelligence (genAI) methodologies, such as neural posterior density estimation via simulation-based inference and sequential Bayesian inference. Thanks to combination of these advanced Bayesian inference techniques, our approach is capable of addressing challenges of monitoring and controlling CO~2~ storage projects. These challenges include dealing with the subsurface's complexity and heterogeneity (seismic and fluid-flow properties), operations optimization, and risk mitigation, e.g. via injection rate control. Because our Digital Twin is capable of handling diverse monitoring data, consisting of time-lapse seismic and data collected at (monitoring) wells, it entails a technology that serves as a platform to integrate seemingly disparate and siloed fields, e.g. geophysics and reservoir engineering. In addition, recent breakthroughs in genAI, allow Digital Twins to capture uncertainty in a principled way [@yu2023IMAGEmsc;@herrmann2023president;@gahlot2023NIPSWSifp]. By employing training and inference recursively, the Digital Twin trains its neural networks on samples of the simulated current state---i.e., the CO~2~ saturation/pressure, paired with simulated imaged seismic and/or data collected at (monitoring) wells. These training pairs of the simulated state and simulated observations are obtained by sampling the posterior distribution, $\mathbf{x}_{k-1}\sim p(\mathbf{x}_{k-1}\vert \mathbf{y}^\mathrm{o}_{1:k-1})$, at the previous timestep, $k-1$, conditioned on field data, $\mathbf{y}^\mathrm{o}_{1:k-1}$, collected over all previous timesteps, $1:k-1$, followed by advancing the state to the current timestep, followed by simulating (seismic/well) observations associated with that state. Given these simulated state-observation pairs, the Digital Twin's networks are trained, so they are current and ready to produce samples of the posterior when the new field data comes in---i.e. $\mathbf{x}_{k}\sim p(\mathbf{x}_{k}\vert \mathbf{y}^\mathrm{o}_{1:k})$. While this new neural approach to data assimilation for CO~2~ storage projects provides what is called an uncertainty-informed *Digital Shadow*, it lacks decision making and control, which would make it a Digital Twin [@thelen2022comprehensivea], capable of optimizing storage operations while mitigating risks including the risk of fracturing the cap rock by exceeding the fracture pressure. The latter risk is illustrated in Figure 1, where the first row contains simulated samples of the pressure difference  at timestep $k=4$, between the reservoir pressure and hydraulic pressure, without control. These samples for the simulated state exceed the fracture pressure and are denoted by the red areas. During this talk, we will demonstrate how the Digital Twin can make informed decisions to avoid exceeding the fracture pressure.
 
 
 ## Methodology
@@ -20,7 +20,7 @@ To make uncertainty informed decisions on adapting the injection rate, 128 sampl
 
 ## Results
 
-To calculate injection rates that mitigate the risk of exceeding the fracture pressure, we proceed as follows. First, because the optimized injection rates are close to the fracture pressure, we consider these optimization as approximations to the injection rates where the fracture pressure are exceeded. Next, Kernel Density Estimation (KDE) is applied to produce the smooth red curve in Figure 2(a). This smoothed probability function is used to calculate the Cumulative Density Function (CDF), plotted in Figure 2(b). Using the fact that non-fracture/fracture occurrence entails a Bernoulli distribution, confidence intervals can be calculated, $\pm Z_{\frac{\alpha}{2}} \sqrt{\frac{\hat{p}(1 - \hat{p})}{128}}$ where $\hat{p}$ represents the CDF (blue line) and $Z_{\frac{\alpha}{2}}=1.96$ with $\alpha=0.05$. From the CDF and confidence intervals (denoted by the grey areas), the following conclusions can be drawn: First, if the initial injection rate of $q_3 = 0.0500 m^3/s$ is kept, the fracture probability lies between 24.47 -- 40.71% (vertical dashed line) and has a maximum likelihood of 32.59%, which are all way too high. Second, if we want to limit the fracture occurrence rate to 1% (red dashed line), then we need to lower the injection rate to $q_3=0.0387\mathrm{m^3/s}$. To ensure the low fracture occurrence rate of 1%, the reduced injection rate is chosen as the smallest injection rate within the confidence interval. As can be observed from Figure 2(b), lowering the injection rate avoids exceeding the fracture pressure at the expense of injecting less CO~2~. Out of 128 samples, 43 samples are fractured with the initial injection rate, while only one sample is fractured with the controlled injection rate. 
+To calculate injection rates that mitigate the risk of exceeding the fracture pressure, we proceed as follows. First, because the optimized injection rates are close to the fracture pressure, we consider these optimization as approximations to the injection rates where the fracture pressure are exceeded. Next, Kernel Density Estimation (KDE) is applied to produce the smooth red curve in Figure 2(a). This smoothed probability function is used to calculate the Cumulative Density Function (CDF), plotted in Figure 2(b). Using the fact that non-fracture/fracture occurrence entails a Bernoulli distribution, confidence intervals can be calculated, $\pm Z_{\frac{\alpha}{2}} \sqrt{\frac{\hat{p}(1 - \hat{p})}{128}}$ where $\hat{p}$ represents the CDF (blue line) and $Z_{\frac{\alpha}{2}}=1.96$ with $\alpha=0.05$. From the CDF and confidence intervals (denoted by the grey areas), the following conclusions can be drawn: First, if the initial injection rate of $q_3 = 0.0500 m^3/s$ is kept, the fracture probability lies between 24.47 -- 40.71% (vertical dashed line) and has a maximum likelihood of 32.59%, which are all way too high. Second, if we want to limit the fracture occurrence rate to 1% (red dashed line), then we need to lower the injection rate to $q_3=0.0387\mathrm{m^3/s}$. To ensure the low fracture occurrence rate of 1%, the reduced injection rate is chosen as the smallest injection rate within the confidence interval. As can be observed from Figure 1 (third row) and Figure 2(b), lowering the injection rate avoids exceeding the fracture pressure at the expense of injecting less CO~2~. Out of 128 samples, 43 samples are fractured with the initial injection rate, while only one sample is fractured with the controlled injection rate. 
 
 ## Conclusion and discussions
 
@@ -29,7 +29,7 @@ The above example illustrates how Digital Twins can be used to mitigate risks as
 ::: {#fig-flow}
 ![](./figs/Figure1.png){width="90%"}
 
-Pressure state at time-step $k=3$ and a comparative analysis of pressure outputs from the digital twin at time-step $k=4$
+Pressure state at time-step $k=3$ (second row) and a comparative analysis of pressure outputs (first and third) from the digital twin at time-step $k=4$
 :::
 
 ::: {#fig-fracture}
