--- a/GahlotLi2024SEG/paper.bib
+++ b/GahlotLi2024SEG/paper.bib
@@ -46,3 +46,39 @@
   presentation = {https://slim.gatech.edu/Publications/Public/Conferences/SEG/2023/yu2023IMAGEmsc},
   note = {(IMAGE, Houston)}
 }
+
+@article{doi:10.1073/pnas.1912789117,
+author = {Kyle Cranmer  and Johann Brehmer  and Gilles Louppe },
+title = {The frontier of simulation-based inference},
+journal = {Proceedings of the National Academy of Sciences},
+volume = {117},
+number = {48},
+pages = {30055-30062},
+year = {2020},
+doi = {10.1073/pnas.1912789117},
+URL = {https://www.pnas.org/doi/abs/10.1073/pnas.1912789117},
+eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.1912789117},
+abstract = {Many domains of science have developed complex simulations to describe phenomena of interest. While these simulations provide high-fidelity models, 
+they are poorly suited for inference and lead to challenging inverse problems. We review the rapidly developing field of simulation-based inference and identify 
+the forces giving additional momentum to the field. Finally, we describe how the frontier is expanding so that a broad audience can appreciate the profound 
+influence these developments may have on science.}
+}
+
+@article{papamakarios2019sequential,
+      title={Sequential Neural Likelihood: Fast Likelihood-free Inference with Autoregressive Flows}, 
+      author={George Papamakarios and David C. Sterratt and Iain Murray},
+      year={2019},
+      eprint={1805.07226},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@inproceedings{kruse2021hint,
+  title={HINT: Hierarchical invertible neural transport for density estimation and Bayesian inference},
+  author={Kruse, Jakob and Detommaso, Gianluca and K{\"o}the, Ullrich and Scheichl, Robert},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={35},
+  number={9},
+  pages={8191--8199},
+  year={2021}
+}
